--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MZ AI Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <h1>Welcom to the English Poem Generator</h1>
-    <script src="java.js"></script>
+    <script src="src/java.js"></script>
   </body>
 </html>
