--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Welcom to the English Poem Generator</h1>
+    <h1>Welcome to the English Poem Generator</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/mazubillaga" target="_blank"
+        >Miren Zubillaga</a
+      >
+      and is open-sourced on
+      <a
+        href="https://github.com/mazubillaga/mz-ai-poems-generator"
+        target="_blank"
+        >Github</a
+      >
+      and is hosted on
+      <a href="https://mz-ai-poems-generator.netlify.app/" target="_blank"
+        >Netlify</a
+      >.
+    </footer>
     <script src="src/java.js"></script>
   </body>
 </html>
