Added the basic HTML structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Welcome to the English Poem Generator</h1>
+    <header>
+      <h1>Welcome to the English Poem Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem"
+          auotfocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The poem will go here
+        <br />
+        The poem will go here
+      </div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/mazubillaga" target="_blank"
